# arxiv-obsidian-pipeline

./: .env.example  .gitignore  pyproject.toml  run_pipeline.bat
config/: settings.yaml
data/: pipeline.db
src/: arxiv_client.py  cleanup_rejected_notes.py  content_extractor.py  db.py  email_parser.py  fulltext_fetcher.py  gmail_client.py  main.py  main_test.py  models.py  note_builder.py  obsidian_writer.py  paper_enricher.py  summarizer.py  test_arxiv_client.py
templates/: daily_index.md.j2  paper_note.md.j2
