[project]
name = "arxiv-obsidian-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "yueyingwu",email = "3265918933@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=2.29.0,<3.0.0)",
    "google-api-python-client (>=2.193.0,<3.0.0)",
    "google-auth-httplib2 (>=0.3.0,<0.4.0)",
    "google-auth-oauthlib (>=1.3.0,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "feedparser (>=6.0.12,<7.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false